--- a/iMANGA_mockMaNGAdatacubes.ipynb
+++ b/iMANGA_mockMaNGAdatacubes.ipynb
@@ -269,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "snr_file = np.genfromtxt(\"./iMaNGA/snr_smoo.dat\")\n",
+    "snr_file = np.genfromtxt(\"./iMaNGA_data/snr_smoo.dat\")\n",
     "\n",
     "snr = snr_file[:,1]"
    ]
@@ -302,7 +302,7 @@
     "ver = str(\"v1.1\")\n",
     "lib = str(\"th\")\n",
     "\n",
-    "hdul = fits.open('./iMaNGA/MaStar_SSP_'+ver+'.fits')\n",
+    "hdul = fits.open('iMaStar_MaStar_SSP_'+ver+'.fits')\n",
     "wave_rest=hdul[2].data[0,:] #lambda array\n",
     "wave= wave_rest*(1+redshift)\n",
     "hdul.close()"
@@ -547,19 +547,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filer_g = np.genfromtxt('./iMaNGA/sdss_filters/SLOAN_SDSS.g.dat')\n",
+    "filer_g = np.genfromtxt('./iMaNGA_data/sdss_filters/SLOAN_SDSS.g.dat')\n",
     "wave_g = filer_g[:,0]\n",
     "response_g = filer_g[:,1]\n",
     "\n",
-    "filer_r = np.genfromtxt('./iMaNGA/sdss_filters/SLOAN_SDSS.r.dat')\n",
+    "filer_r = np.genfromtxt('./iMaNGA_data/sdss_filters/SLOAN_SDSS.r.dat')\n",
     "wave_r = filer_r[:,0]\n",
     "response_r = filer_r[:,1]\n",
     "\n",
-    "filer_i = np.genfromtxt('./iMaNGA/sdss_filters/SLOAN_SDSS.i.dat')\n",
+    "filer_i = np.genfromtxt('./iMaNGA_data/sdss_filters/SLOAN_SDSS.i.dat')\n",
     "wave_i = filer_i[:,0]\n",
     "response_i = filer_i[:,1]\n",
     "\n",
-    "filer_z = np.genfromtxt('./iMaNGA/sdss_filters/SLOAN_SDSS.z.dat')\n",
+    "filer_z = np.genfromtxt('./iMaNGA_data/sdss_filters/SLOAN_SDSS.z.dat')\n",
     "wave_z = filer_z[:,0]\n",
     "response_z = filer_z[:,1]\n"
    ]
@@ -580,7 +580,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdu_psf, headerPSF = fits.getdata(\"./iMaNGA/sdss_filters/ePSF.fits.gz\", header=True)\n",
+    "hdu_psf, headerPSF = fits.getdata(\"./iMaNGA_data/sdss_filters/ePSF.fits.gz\", header=True)\n",
     "\n",
     "psfg = hdu_psf[:,:, 0]\n",
     "psfr = hdu_psf[:,:, 1]\n",
