--- a/iMaNGA_VAC_Example.ipynb
+++ b/iMaNGA_VAC_Example.ipynb
@@ -32,6 +32,7 @@
     "from astropy.io import fits\n",
     "\n",
     "\n",
+    "sys.path.insert(0, \"/users/lnanni/.conda/envs/env/lib/python3.7/site-packages\")\n"
    ]
   },
   {
