--- a/iMANGA_mockMaNGAdatacubes.ipynb
+++ b/iMANGA_mockMaNGAdatacubes.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6cdb4bcc",
+   "id": "dcef326e",
    "metadata": {},
    "source": [
     "# Mock MaNGA datacubes\n",
     "\n",
-    "## This notebook shows how to go from the syntehtic iMaNGA datacubes, publicly available, to a mock MaNGA observation\n",
+    "### This notebook shows how to go from the synthetic iMaNGA datacubes, publicly available, to a mock MaNGA observation\n",
     "\n",
-    "##### It can be applied to any other syntethic datacube\n",
-    "##### It can be modified to obtain other mock observations\n",
+    "#### It can be applied to any other syntethic datacube\n",
+    "#### It can be modified to obtain other mock observations\n",
     "\n",
     "\n",
     "#### If used for scientific publications, please, cite Nanni+2022 for the datacubes, Nanni+2023a and Nanni+2023b for the iMaNGA VAC"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5652aa9e",
+   "id": "2f92b619",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2048e08f",
+   "id": "e71db114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dd15f5c",
+   "id": "e48d9841",
    "metadata": {},
    "source": [
-    "Selecting a galaxy"
+    "### Selecting a galaxy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a4160b6c",
+   "id": "22cbfb60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edf1a68d",
+   "id": "75350d54",
    "metadata": {},
    "source": [
     "Using the Api to download the iMaNGA files.\n",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "93b5b87c",
+   "id": "67e05101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2a0d2112",
+   "id": "01e67b13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "566eda2b",
+   "id": "a3bdefdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ca96988d",
+   "id": "0fd339a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38b85aca",
+   "id": "e0eb4424",
    "metadata": {},
    "source": [
     "Now that the datacube is ready to be used, we can also download the information for the galaxy (such as morphology information) available thanks to the iMaNGA VAC (see Nanni+2022, Nanni+2023a and Nanni+2023b to know more about the data analysis followed)\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c44a04da",
+   "id": "34537f8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d19e95e5",
+   "id": "e949c692",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "33bd85ab",
+   "id": "08297095",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,16 +154,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2af81d4f",
+   "id": "39625773",
    "metadata": {},
    "source": [
-    "We now input the FoV grid"
+    "### We now input the FoV grid"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e6f7466e",
+   "id": "24a04566",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,16 +172,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35174aa1",
+   "id": "79315257",
    "metadata": {},
    "source": [
-    "Now we apply this mask to the datacube"
+    "### Now we apply this mask to the datacube"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "aef29c53",
+   "id": "49f85ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0fed4810",
+   "id": "a83dde69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8c453136",
+   "id": "0ce18890",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d3c7eb9",
+   "id": "cf494ca7",
    "metadata": {},
    "source": [
     "### Adding the noise "
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36f2ac11",
+   "id": "cdc6720d",
    "metadata": {},
    "source": [
     "As presented in Nanni+2022, we define the SNR as a function of the wavelength from MaNGA observation. \n",
@@ -265,11 +265,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "109992ee",
+   "id": "48748842",
    "metadata": {},
    "outputs": [],
    "source": [
-    "snr_file = np.genfromtxt(\"./iMaNGA_data/snr_smoo.dat\")\n",
+    "snr_file = np.genfromtxt(\"./iMaNGA/snr_smoo.dat\")\n",
     "\n",
     "snr = snr_file[:,1]"
    ]
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5aa3fcf5",
+   "id": "0b737907",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bcbf01f",
+   "id": "cf37a777",
    "metadata": {},
    "source": [
     "We here use the MaStar wavelegths, the file is available here: https://www.icg.port.ac.uk/mastar/"
@@ -295,14 +295,14 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4f179dbb",
+   "id": "8d2254ce",
    "metadata": {},
    "outputs": [],
    "source": [
     "ver = str(\"v1.1\")\n",
     "lib = str(\"th\")\n",
     "\n",
-    "hdul = fits.open('iMaStar_MaStar_SSP_'+ver+'.fits')\n",
+    "hdul = fits.open('./iMaNGA/MaStar_SSP_'+ver+'.fits')\n",
     "wave_rest=hdul[2].data[0,:] #lambda array\n",
     "wave= wave_rest*(1+redshift)\n",
     "hdul.close()"
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3525e0d2",
+   "id": "8cfa18cb",
    "metadata": {},
    "outputs": [
     {
@@ -342,16 +342,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43e6f7fb",
+   "id": "3ad16bad",
    "metadata": {},
    "source": [
-    "Now, we can include the noise spaxel per spaxel, as in Eq. 4 in Nanni+2022"
+    "#### Now, we can include the noise spaxel per spaxel, as in Eq. 4 in Nanni+2022"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4caa396d",
+   "id": "57978e6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "80834404",
+   "id": "4da0c06b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0762a918",
+   "id": "8db88450",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ecd1c6ed",
+   "id": "ca05de63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,16 +400,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6c5b655",
+   "id": "8342e521",
    "metadata": {},
    "source": [
-    "Here follows some examples of the effects of adding the noise to the spectra in different ares"
+    "#### Here it follows some examples of the effects of adding the noise to the spectra in different ares"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2480c310",
+   "id": "15e8e184",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1eebae3e",
+   "id": "91bae836",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9249b7e8",
+   "id": "1898b5f7",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d85183cc",
+   "id": "5b027b19",
    "metadata": {},
    "source": [
     "### We can now add the effect of the point spread function\n",
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "404765b1",
+   "id": "9d3fabf1",
    "metadata": {},
    "source": [
     "#### we make use of the SDSS filters to convolve with the effective PSF in the differnt wavelegth band\n",
@@ -543,30 +543,30 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6484753e",
+   "id": "36a827a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filer_g = np.genfromtxt('./iMaNGA_data/sdss_filters/SLOAN_SDSS.g.dat')\n",
+    "filer_g = np.genfromtxt('./iMaNGA/sdss_filters/SLOAN_SDSS.g.dat')\n",
     "wave_g = filer_g[:,0]\n",
     "response_g = filer_g[:,1]\n",
     "\n",
-    "filer_r = np.genfromtxt('./iMaNGA_data/sdss_filters/SLOAN_SDSS.r.dat')\n",
+    "filer_r = np.genfromtxt('./iMaNGA/sdss_filters/SLOAN_SDSS.r.dat')\n",
     "wave_r = filer_r[:,0]\n",
     "response_r = filer_r[:,1]\n",
     "\n",
-    "filer_i = np.genfromtxt('./iMaNGA_data/sdss_filters/SLOAN_SDSS.i.dat')\n",
+    "filer_i = np.genfromtxt('./iMaNGA/sdss_filters/SLOAN_SDSS.i.dat')\n",
     "wave_i = filer_i[:,0]\n",
     "response_i = filer_i[:,1]\n",
     "\n",
-    "filer_z = np.genfromtxt('./iMaNGA_data/sdss_filters/SLOAN_SDSS.z.dat')\n",
+    "filer_z = np.genfromtxt('./iMaNGA/sdss_filters/SLOAN_SDSS.z.dat')\n",
     "wave_z = filer_z[:,0]\n",
     "response_z = filer_z[:,1]\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "db2a869b",
+   "id": "3b975b0f",
    "metadata": {},
    "source": [
     "### We construct an average effective PSF in MaNGA observation (see Nanni+2022)\n",
@@ -576,11 +576,11 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2f5c5efd",
+   "id": "7a1c4d57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdu_psf, headerPSF = fits.getdata(\"./iMaNGA_data/sdss_filters/ePSF.fits.gz\", header=True)\n",
+    "hdu_psf, headerPSF = fits.getdata(\"./iMaNGA/sdss_filters/ePSF.fits.gz\", header=True)\n",
     "\n",
     "psfg = hdu_psf[:,:, 0]\n",
     "psfr = hdu_psf[:,:, 1]\n",
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ced4db3",
+   "id": "a9524036",
    "metadata": {},
    "source": [
     "##### Now we convolve the datacubes with the effective PSF\n",
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "db1791b0",
+   "id": "da20d67e",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "77620a0a",
+   "id": "8d0b6ac1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "96ea69cc",
+   "id": "11a3c700",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "281c98ea",
+   "id": "32caf97b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "5a86b764",
+   "id": "e7a512bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aaa79e6",
+   "id": "baad6d7d",
    "metadata": {},
    "outputs": [],
    "source": []
