--- a/EAGLE.ipynb
+++ b/EAGLE.ipynb
@@ -17,28 +17,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3ba40f91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "import h5py\n",
     "import numpy as np\n",
     "import astropy.units as u\n",
     "from astropy.constants import G\n",
     "import matplotlib.pyplot as plt \n",
-    "from read_dataset import read_dataset \n",
-    "#modified from the script presented here \n",
-    "#https://arxiv.org/pdf/1706.09899.pdf\n",
-    "from read_header import read_header \n",
-    "#modified from the script presented\n",
-    "#here https://arxiv.org/pdf/1706.09899.pdf\n",
     "\n",
     "import astropy.cosmology as co\n",
     "cosmo = co.Planck15\n",
     "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d9b32ae2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_header():\n",
+    "    \"\"\" modified from the script presented here https://arxiv.org/pdf/1706.09899.pdf\n",
+    "    Read various attributes from the header group. \"\"\"\n",
+    "    \n",
+    "    # This is where you have to change the path for the snapshot you want to use\n",
+    "\n",
+    "    f       = h5py.File('./iMaNGA/RefL0012N0188/snapshot_028_z000p000/snap_028_z000p000.0.hdf5', 'r')\n",
+    "    a       = f['Header'].attrs.get('Time')         # Scale factor.\n",
+    "    h       = f['Header'].attrs.get('HubbleParam')  # h.\n",
+    "    boxsize = f['Header'].attrs.get('BoxSize')      # L [Mph/h].\n",
+    "    f.close()\n",
+    "\n",
+    "    return a, h, boxsize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d3b3ed10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_dataset(itype, att, nfiles=16):\n",
+    "    \n",
+    "    \"\"\" modified from the script presented here https://arxiv.org/pdf/1706.09899.pdf\n",
+    "    Read a selected dataset, itype is the PartType and att is the attribute name. \"\"\"\n",
+    "\n",
+    "    # Output array.\n",
+    "    data = []\n",
+    "\n",
+    "    # Loop over each file and extract the data.\n",
+    "    for i in range(nfiles):\n",
+    "        \n",
+    "        # This is where you have to change the path for the snapshot you want to use\n",
+    "        \n",
+    "        f = h5py.File('./iMaNGA/RefL0012N0188/snapshot_028_z000p000/snap_028_z000p000.%i.hdf5'%i, 'r') \n",
+    "        tmp = f['PartType%i/%s'%(itype, att)][...]\n",
+    "        data.append(tmp)\n",
+    "\n",
+    "        # Get conversion factors.\n",
+    "        cgs     = f['PartType%i/%s'%(itype, att)].attrs.get('CGSConversionFactor')\n",
+    "        aexp    = f['PartType%i/%s'%(itype, att)].attrs.get('aexp-scale-exponent')\n",
+    "        hexp    = f['PartType%i/%s'%(itype, att)].attrs.get('h-scale-exponent')\n",
+    "\n",
+    "        # Get expansion factor and Hubble parameter from the header.\n",
+    "        a       = f['Header'].attrs.get('Time')\n",
+    "        h       = f['Header'].attrs.get('HubbleParam')\n",
+    "\n",
+    "        f.close()\n",
+    "\n",
+    "    # Combine to a single array.\n",
+    "    if len(tmp.shape) > 1:\n",
+    "        data = np.vstack(data)\n",
+    "    else:\n",
+    "        data = np.concatenate(data)\n",
+    "\n",
+    "    # Convert to physical.\n",
+    "    if data.dtype != np.int32 and data.dtype != np.int64:\n",
+    "        data = np.multiply(data, cgs * a**aexp * h**hexp, dtype='f8')\n",
+    "\n",
+    "    return data"
    ]
   },
   {
@@ -51,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "3f1a6005",
    "metadata": {},
    "outputs": [],
@@ -110,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "eaa05092",
    "metadata": {},
    "outputs": [],
@@ -124,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "434a92f3",
    "metadata": {},
    "outputs": [],
@@ -134,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "65ed2cfc",
    "metadata": {},
    "outputs": [],
@@ -153,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "8469cd58",
    "metadata": {},
    "outputs": [],
@@ -186,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "491a381e",
    "metadata": {},
    "outputs": [],
@@ -196,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "665b4b44",
    "metadata": {},
    "outputs": [],
@@ -208,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "87918245",
    "metadata": {},
    "outputs": [
@@ -216,7 +278,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 50/50 [00:35<00:00,  1.42it/s]\n"
+      "100%|███████████████████████████████████████████| 50/50 [00:25<00:00,  1.93it/s]\n"
      ]
     }
    ],
@@ -231,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "5db8c2ed",
    "metadata": {},
    "outputs": [],
@@ -241,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "49942a46",
    "metadata": {},
    "outputs": [
@@ -284,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "97eadbf8",
    "metadata": {},
    "outputs": [
