--- a/iMaStar_Example.ipynb
+++ b/iMaStar_Example.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b9d2f064",
+   "metadata": {},
+   "source": [
+    "# Example code of how to add light to SPH simulation\n",
+    "\n",
+    "## Here we use a TNG50 galaxy, i.e. snapshot = 96, galaxy id = 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2d4ffce3",
@@ -47,6 +57,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6642339e",
+   "metadata": {},
+   "source": [
+    "#### we here define the snap and galaxy from the snap to use"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "448f6370",
@@ -59,19 +77,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4985d252",
+   "metadata": {},
+   "source": [
+    "#### we here import the stellar particles files. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "29278a47",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "namegal = ('snap'+str(snap)+\"gal\"+str(gal))\n",
     "\n",
-    "# we here import the stellar particles files. The contain:\n",
-    "# stellar position (x,y,z), stellar information (stellar mass, metallcity, age)\n",
-    "# stellar velocity (vx, vy,vz) information\n",
+    "#It contains:\n",
+    "# stellar particle position (x,y,z), \n",
+    "# stellar particle information (stellar mass, metallcity, age)\n",
+    "# stellar particle velocity (vx, vy,vz) information\n",
     "\n",
-    "data_gal = np.loadtxt(\"./Data/\"+namegal+\"/\"+namegal+\".dat\") # older stellar populations\n"
+    "\n",
+    "data_gal = np.loadtxt(\"./Data/\"+namegal+\"/\"+namegal+\".dat\") \n"
    ]
   },
   {
@@ -100,9 +129,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# to adapt this code to any SPH simulation, we can compute the centre-of-mass of the galaxy as follows\n",
-    "# to then centre the IFU observation to the centre of mass, if the simulation does not provide it\n",
-    "#the data here are already centre so this lines are commented out"
+    "# to adapt this code to any SPH simulation, we can compute \n",
+    "# the centre-of-mass of the galaxy as follows\n",
+    "# to then centre the IFU observation to the centre of mass, \n",
+    "# if the simulation does not provide it\n",
+    "# the data here are already centre so this lines are commented out\n",
+    "\n",
+    "# See the Eagle.ipynb for example"
    ]
   },
   {
@@ -137,14 +170,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dist_A = cosmo.luminosity_distance(redshift) #luminosity distance at the given redshift\n",
-    "theta_spaxel = 0.5*uu.arcsec #spaxel resolution of 0.5\"\n",
+    "#luminosity distance at the given redshift:\n",
+    "dist_A = cosmo.luminosity_distance(redshift) \n",
+    "#spaxel resolution of 0.5\":\n",
+    "theta_spaxel = 0.5*uu.arcsec \n",
     "\n",
     "# resolution of the spacel in pc\n",
     "l_spaxel = (theta_spaxel * dist_A).to(uu.pc, uu.dimensionless_angles())\n",
     "\n",
     "\n",
-    "#assuming 150 spaxel, this number can be change for having larger or smaller FoV\n",
+    "#assuming 150 spaxel, \n",
+    "#this number can be change for having larger or smaller FoV\n",
     "n_pixel = 150\n",
     "#final FoV\n",
     "FoV = n_pixel * np.asarray(l_spaxel)"
@@ -222,7 +258,11 @@
     "\n",
     "for i in tqdm(range(n_pixel)):\n",
     "    for j in range(n_pixel):\n",
-    "        arr[:,i,j], std_vz[i,j] = imastar.bin_spectrum(redshift, Mstar[tin>10**-3], Zin[tin>10**-3], tin[tin>10**-3], velz[tin>10**-3], x_bin_id_list,y_bin_id_list, i+1, j+1)"
+    "        arr[:,i,j], std_vz[i,j] = \\\n",
+    "        imastar.bin_spectrum(redshift, Mstar[tin>10**-3], \\\n",
+    "                             Zin[tin>10**-3], tin[tin>10**-3], \\\n",
+    "                             velz[tin>10**-3], \\\n",
+    "                             x_bin_id_list,y_bin_id_list, i+1, j+1)"
    ]
   },
   {
@@ -268,8 +308,8 @@
     "cbar.set_label('$\\sigma_{v_z}$ [km/s]',fontsize=26);\n",
     "\n",
     "\n",
-    "plt.xlabel(r'pixel', fontsize=26) #micron\n",
-    "plt.ylabel(r'pixel', fontsize=26) #micron\n",
+    "plt.xlabel(r'pixel', fontsize=26) \n",
+    "plt.ylabel(r'pixel', fontsize=26) \n",
     "\n",
     "\n",
     "plt.gca().invert_yaxis()\n"
@@ -302,7 +342,9 @@
     "ax.tick_params(length=5, which='minor', direction=\"in\", labelsize=26)\n",
     "\n",
     "\n",
-    "im = ax.imshow(arr[2419, :,:].T, cmap=\"gray_r\", alpha=0.8,  interpolation=\"nearest\", origin='lower', norm=simple_norm(arr[2000, :,:].T, stretch='log', log_a=1000))\n",
+    "im = ax.imshow(arr[2419, :,:].T, cmap=\"gray_r\", alpha=0.8,\\\n",
+    "               interpolation=\"nearest\", origin='lower', \\\n",
+    "               norm=simple_norm(arr[2000, :,:].T, stretch='log', log_a=1000))\n",
     "\n",
     "\n",
     "cbar = plt.colorbar(im,ax=ax, pad = .0050, aspect=30)\n",
@@ -313,8 +355,8 @@
     "\n",
     "cbar.set_label(r'$ F_\\lambda\\left[\\,erg/s \\,/m^2/\\,\\AA \\,\\,\\right]$',fontsize=26);\n",
     "\n",
-    "plt.xlabel(r'pixel', fontsize=26) #micron\n",
-    "plt.ylabel(r'pixel', fontsize=26) #micron\n",
+    "plt.xlabel(r'pixel', fontsize=26) \n",
+    "plt.ylabel(r'pixel', fontsize=26) \n",
     "ttt.set_size(20)\n"
    ]
   },
@@ -351,7 +393,6 @@
     "vely_III = vely[tin < 10**-3 ]\n",
     "velz_III = velz[tin < 10**-3 ]\n",
     "\n",
-    "# using only the young stellar particle kinematics \n",
     "\n",
     "x_bin_id_list_miii = np.digitize(x_miii, x_edge)\n",
     "y_bin_id_list_miii = np.digitize(y_miii, y_edge)\n"
@@ -378,7 +419,11 @@
     "\n",
     "    for i in tqdm(range(n_pixel)):\n",
     "        for j in range(n_pixel):\n",
-    "            arr_miii[:,i,j], std_vz_gas[i,j] = imastar.bin_spectrum_miii(redshift, SFR, Z_,logC,logp,fPDR, velz_III, x_bin_id_list_miii, y_bin_id_list_miii, i+1, j+1)"
+    "            arr_miii[:,i,j], std_vz_gas[i,j] = \\\n",
+    "            imastar.bin_spectrum_miii(redshift, SFR, Z_,\\\n",
+    "                                      logC,logp,fPDR, velz_III,\\\n",
+    "                                      x_bin_id_list_miii,\\\n",
+    "                                      y_bin_id_list_miii, i+1, j+1)"
    ]
   },
   {
@@ -521,7 +566,8 @@
     "\n",
     "\n",
     "ax.plot(wave[np.where((wave>4000.)&(wave<4200.))[0]], \\\n",
-    "         arr_miii[:, 59,57][np.where((wave>4000.)&(wave<4200.))[0]], alpha=0.6, color='#1f7278', linewidth=1.2, label='MIII', zorder=2)\n",
+    "         arr_miii[:, 59,57][np.where((wave>4000.)&(wave<4200.))[0]],\\\n",
+    "        alpha=0.6, color='#1f7278', linewidth=1.2, label='MIII', zorder=2)\n",
     "\n",
     "ax.plot(wave[np.where((wave>4000.)&(wave<4200.))[0]],\\\n",
     "         arr_down_miii[:, 59,57][np.where((wave>4000.)&(wave<4200.))[0]],  alpha=1,\\\n",
@@ -529,15 +575,13 @@
     "ttt = ax.yaxis.get_offset_text()\n",
     "ttt.set_size(20)\n",
     "\n",
-    "#ax.set_ylim([10**-(22), 10.*10**-(18)])\n",
     "plt.legend(fontsize=18, ncol=2)\n",
     "\n",
     "\n",
     "plt.ylabel(r'$ F_\\lambda\\quad\\left[\\,erg/s \\,/m^2/\\,\\AA \\,\\,\\right]$', fontsize=22); \n",
-    "plt.xlabel(r'$\\lambda\\,[\\r{A}]$', fontsize=22) #micron\n",
+    "plt.xlabel(r'$\\lambda\\,[\\r{A}]$', fontsize=22) \n",
     "plt.grid(ls = '-.', lw = 0.55)\n",
     "\n",
-    "#plt.savefig(\"./Plot-iMaNGA-v1.0/3_spaxels_zoom.pdf\",bbox_inches = 'tight')\n",
     "plt.show()\n",
     "plt.clf()\n",
     "plt.cla()\n",
@@ -570,24 +614,24 @@
     "ax.tick_params(length=3, which='minor', direction=\"in\", labelsize=22)\n",
     "\n",
     "ax.plot(wave[np.where((wave>4000.)&(wave<4200.))[0]], \\\n",
-    "         arr[:, 59,57][np.where((wave>4000.)&(wave<4200.))[0]], alpha=0.6, color='#8b2728', linewidth=1.2, label='MaStar', zorder=2)\n",
+    "         arr[:, 59,57][np.where((wave>4000.)&(wave<4200.))[0]],\\\n",
+    "        alpha=0.6, color='#8b2728', linewidth=1.2, label='MaStar', zorder=2)\n",
     "\n",
     "ax.plot(wave[np.where((wave>4000.)&(wave<4200.))[0]], \\\n",
-    "         arr_down[:, 59,57][np.where((wave>4000.)&(wave<4200.))[0]], alpha=1, color='#71090B', linewidth=1., label='downgraded and shifted MaStar', zorder=3)\n",
+    "         arr_down[:, 59,57][np.where((wave>4000.)&(wave<4200.))[0]],\\\n",
+    "        alpha=1, color='#71090B', linewidth=1., label='downgraded and shifted MaStar', zorder=3)\n",
     "\n",
     "\n",
     "ttt = ax.yaxis.get_offset_text()\n",
     "ttt.set_size(20)\n",
     "\n",
-    "#ax.set_ylim([10**-(22), 10.*10**-(18)])\n",
     "plt.legend(fontsize=18, ncol=2)\n",
     "\n",
     "\n",
     "plt.ylabel(r'$ F_\\lambda\\quad\\left[\\,erg/s \\,/m^2/\\,\\AA \\,\\,\\right]$', fontsize=22); \n",
-    "plt.xlabel(r'$\\lambda\\,[\\r{A}]$', fontsize=22) #micron\n",
+    "plt.xlabel(r'$\\lambda\\,[\\r{A}]$', fontsize=22) \n",
     "plt.grid(ls = '-.', lw = 0.55)\n",
     "\n",
-    "#plt.savefig(\"./Plot-iMaNGA-v1.0/3_spaxels_zoom.pdf\",bbox_inches = 'tight')\n",
     "plt.show()\n",
     "plt.clf()\n",
     "plt.cla()\n",
@@ -619,24 +663,26 @@
     "ax.tick_params(length=8, which='major', direction=\"in\", labelsize=22)\n",
     "ax.tick_params(length=3, which='minor', direction=\"in\", labelsize=22)\n",
     "\n",
-    "plt.plot(wave, arr_down[:, 53,67], '-', alpha=1., color='#71090B', linewidth=1., label='downgraded and shifted MaStar', zorder=3)\n",
+    "plt.plot(wave, arr_down[:, 53,67], '-', alpha=1., color='#71090B',\\\n",
+    "         linewidth=1., label='downgraded and shifted MaStar', zorder=3)\n",
     "\n",
-    "plt.plot(wave, arr_down_miii[:, 53,67], '-', alpha=1., color='#05585E', linewidth=1., label='downgraded and shifted MIII', zorder=3)\n",
+    "plt.plot(wave, arr_down_miii[:, 53,67], '-', alpha=1., \\\n",
+    "         color='#05585E', linewidth=1., label='downgraded and shifted MIII', zorder=3)\n",
     "\n",
     "\n",
     "\n",
-    "plt.plot(wave, arr_down_miii[:, 53,67]+arr_down[:, 53,67], '-', alpha=1, color='#010F13', linewidth=1., label='synthetic spectrum', zorder=3)\n",
+    "plt.plot(wave, arr_down_miii[:, 53,67]+arr_down[:, 53,67], '-',\\\n",
+    "         alpha=1, color='#010F13', linewidth=1., label='synthetic spectrum', zorder=3)\n",
     "\n",
     "\n",
     "plt.ylabel(r'$ F_\\lambda\\quad\\left[\\,erg/s \\,/m^2/\\,\\AA \\,\\,\\right]$', fontsize=22); \n",
-    "plt.xlabel(r'$\\lambda\\,[\\r{A}]$', fontsize=22) #micron\n",
+    "plt.xlabel(r'$\\lambda\\,[\\r{A}]$', fontsize=22) \n",
     "plt.legend(fontsize=18, ncol=2)\n",
     "plt.grid(ls = '-.', lw = 0.55)\n",
     "ttt = ax.yaxis.get_offset_text()\n",
     "ttt.set_size(20)\n",
     "ax.set_ylim([10**-(22), 6.5*10**-(17)])\n",
     "\n",
-    "#plt.savefig(\"./Plot-iMaNGA-v1.0/3_spaxels.pdf\",bbox_inches = 'tight')\n",
     "plt.show()\n",
     "plt.clf()\n",
     "plt.cla()\n",
